fix: Add style to firefox scrollbar

--- a/src/components/CardModal/CardModal.scss
+++ b/src/components/CardModal/CardModal.scss
@@ -39,8 +39,11 @@
   color: inherit;
   background: inherit;
   font-family: inherit;
-  font-size: 16px;
+  font-size: 14px;
   line-height: inherit;
   resize: none;
   outline: none;
+
+  scrollbar-width: thin;
+  scrollbar-color: #4a5568 #a0aec0;
 }
